# rust-mumble

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: publish-container-image.yml
scripts/: install-exporter.sh  install.sh
src/: channel.rs  clean.rs  client.rs  crypt.rs  error.rs  main.rs  metrics.rs  state.rs  target.rs  voice.rs
src/handler/: authenticate.rs  channel_state.rs  crypt_setup.rs  mod.rs  permission_query.rs  ping.rs  user_state.rs  user_stats.rs  version.rs  voice_packet.rs  voice_target.rs
src/http/: axum_auth_wrapper.rs  deaf.rs  metrics.rs  mod.rs  mute.rs  status.rs
src/message/: mod.rs
src/proto/: mod.rs
src/server/: constants.rs  tcp.rs  udp.rs
